Run the tests in module tests_java_21
Test: ./tools/test.py 'switchpatternmatching.*'
Test: ./tools/test.py --no-r8lib 'switchpatternmatching.*'
Bug: b/337801526
Change-Id: I67e88340b85aa719c21d7bb61623c2bf63547bf2